Fixed overflow issue

--- a/src/app/components/list/list.scss
+++ b/src/app/components/list/list.scss
@@ -24,12 +24,12 @@
 
   .selected-category {
     padding: 0;
+    padding-top: 2vmin;
     text-align: center;
     font-size: 5vmin;
-    line-height: 15vmin;
     margin-left: 3.5vmin;
     width: calc(100% - 31.5vmin);
-    height: 16vmin;
+    height: 14vmin;
     border-top-left-radius: 0.9vmin;
     border-bottom-left-radius: 0.9vmin;
     background-color: white;
